--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href ="assets/style.css" rel="stylesheet">
+    <script src="./script.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <div class = "container">
+        <div class="question-container">
+        <div id="questions">Questions</div>
+        <div id="answers-btns">
+        <button class ="btn">ANSWER</button>
+        <button class ="btn">ANSWER</button>
+        <button class ="btn">ANSWER</button>
+        <button class ="btn">ANSWER</button>
+        </div>
+        </div>
+        <div class ="controls">
+            <button id="start-btn" class="start-btn btn">Start</button>
+             <button id="next-btn" class="next-btn">Start</button>
+        </div>
+        </div>
+    </main>
     
 </body>
 </html>
