finished styling buttons and added hover and hide

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <main>
         <div class = "container">
-        <div class="question-container">
+        <div class="question-container" class="hide">
         <div id="questions">Questions</div>
-        <div id="answers-btns">
+        <div id="answers-btns" class="btn-layout">
         <button class ="btn">ANSWER</button>
         <button class ="btn">ANSWER</button>
         <button class ="btn">ANSWER</button>
@@ -22,7 +22,7 @@
         </div>
         <div class ="controls">
             <button id="start-btn" class="start-btn btn">Start</button>
-             <button id="next-btn" class="next-btn">Start</button>
+             <button id="next-btn" class="next-btn btn">Next</button>
         </div>
         </div>
     </main>
