added hide class

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <div class = "container">
-        <div class="question-container" class="hide">
+        <div class="question-container hide">
         <div id="questions">Questions</div>
         <div id="answers-btns" class="btn-layout">
         <button class ="btn">ANSWER</button>
@@ -22,7 +22,7 @@
         </div>
         <div class ="controls">
             <button id="start-btn" class="start-btn btn">Start</button>
-             <button id="next-btn" class="next-btn btn">Next</button>
+             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
         </div>
     </main>
