got answers and questions to display in html via js

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div id="question-container" class="hide">
         <div id="questions">Questions</div>
         <div id="answers-btns" class="btn-layout">
+        <!-- <button class ="btn">ANSWER</button>
         <button class ="btn">ANSWER</button>
         <button class ="btn">ANSWER</button>
-        <button class ="btn">ANSWER</button>
-        <button class ="btn">ANSWER</button>
+        <button class ="btn">ANSWER</button> -->
         </div>
         </div>
         <div class ="controls">
