--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <div class = "container">
+            <h1 id ="timerText"></h1>
         <div id="question-container" class="hide">
         <div id="questions">Questions</div>
         <div id="answers-btns" class="btn-layout">
