--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
         <div id="question-container" class="hide">
         <div id="questions">Questions</div>
         <div id="answers-btns" class="btn-layout">
-        <!-- <button class ="btn">ANSWER</button>
-        <button class ="btn">ANSWER</button>
-        <button class ="btn">ANSWER</button>
-        <button class ="btn">ANSWER</button> -->
         </div>
+        </div>
+        <div id ="gameOver" class="hide">
+            <h1>You completed the game</h1>
         </div>
         <div class ="controls">
              <button id="start-btn" class="start-btn btn">Start</button>
