fix all functions besides setinterval

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
         </div>
         <div id ="gameOver" class="hide">
             <h1>You completed the game</h1>
+            <ul id="finalScoresDisplay">
+
+            </ul>
+        </div>
+        <div id="displayScore" class="hide">
+<form >
+  <label for="initial">initial</label>
+  <input type="text" id="initial" name="initial"><br><br>
+  <button type="submit" id="submit-answer" >Submit</button>
+
+</form>
         </div>
         <div class ="controls">
              <button id="start-btn" class="start-btn btn">Start</button>
