added play again button and completed object array

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class ="controls">
              <button id="start-btn" class="start-btn btn">Start</button>
-             <button id="next-btn" class="next-btn btn hide">Next</button>
+             <button id="playAgain-btn" class="playAgain-btn btn hide">Play Again</button>
         </div>
         </div>
     </main>
