finished last touches on css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
   <body>
     <main>
       <div class="container">
+        <div id="gameRules">
+          <h1>This is a trivia Quiz Game</h1>
+          <p>Click start to begin the game</p>
+          <p>Answer all the questions before the time runs out.</p>
+          <p>Your score will be the time at the end of the game</p>
+        </div>
         <h1 id="timerText"></h1>
         <div id="question-container" class="hide">
           <div id="questions">Questions</div>
