--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <div class="container">
         <div id="gameRules">
-          <h1>This is a trivia Quiz Game</h1>
+          <h1>THIS IS A TRIVIA QUIZ GAME</h1>
           <p>Click start to begin the game</p>
           <p>Answer all the questions before the time runs out.</p>
           <p>Your score will be the time at the end of the game</p>
